click to select instead of jump; move to left to avoid clearing attack orders on hover

--- a/ui/mods/missile_command/missile_command.css
+++ b/ui/mods/missile_command/missile_command.css
@@ -3,5 +3,5 @@
   color: white;
   position: absolute;
   top: 100px;
-  right: 70px;
+  left: 70px;
 }
